# django-projects

./: .gitignore  README.md
blog/blog/: settings.py  urls.py
blog/blog_content/: apps.py  models.py  urls.py  views.py
blog/blog_content/migrations/: 0001_initial.py
blog/blog_content/templates/blog_content/: about.html  base.html  home.html  post_confirm_delete.html  post_detail.html  post_form.html  (+1 more)
blog/users/: apps.py  forms.py  models.py  signals.py  views.py
crm/: .gitignore  pyproject.toml
crm/accounts/: apps.py  decorators.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py
crm/accounts/migrations/: 0001_initial.py  0002_order_product.py  0003_auto_20200823_1157.py  0004_auto_20200823_1159.py  0005_auto_20200823_1200.py  0006_order_note.py  0007_customer_user.py  0008_customer_profile_pic.py
crm/accounts/templates/accounts/: DBQueryExamples.py  account_settings.html  customer.html  dashboard.html  delete.html  login.html  main.html  navbar.html  order_form.html  products.html  status.html  user.html
crm/accounts/templates/accounts/resets/: password_reset_done.html
crm/crm/: settings.py  urls.py
ecommerce/: README.md
ecommerce/ecommerce/: settings.py  urls.py
ecommerce/static/js/: cart.js
ecommerce/store/: admin.py  models.py  urls.py  utils.py  views.py
polls/: pyproject.toml
polls/config/: settings.py  urls.py
polls/config/config/: settings.py
polls/polls/: admin.py  models.py  views.py
websockets/: pyproject.toml
websockets/chats/: consumers.py
websockets/websockets/: routing.py  settings.py  urls.py
(+13 files in other folders)
