[tool.poetry]
name = "crm"
version = "0.1.0"
description = "A customer relationship management example application using Django 3.1"
authors = ["danielmichaels <dans.address@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
