[tool.poetry]
name = "channels"
version = "0.1.0"
description = "websockets using channels!"
authors = ["danielmichaels <dans.address@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1"
django-filter = "^2.3.0"
Pillow = "^7.2.0"
channels = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
