[tool.poetry]
name = "websockets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
channels = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
